# korean-data-mcp

./: .gitignore  LICENSE  PYPI_SETUP.md  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
src/korean_data_mcp/: __init__.py  server.py
