[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korean-data-mcp"
version = "0.1.0"
description = "MCP server for Korean web data — Naver, Melon, Daangn, Bunjang, Musinsa and more via Apify"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "korea", "naver", "apify", "scraper", "melon", "daangn", "bunjang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
korean-data-mcp = "korean_data_mcp.server:main"

[project.urls]
Homepage = "https://github.com/leadbrain/korean-data-mcp"
Repository = "https://github.com/leadbrain/korean-data-mcp"
Issues = "https://github.com/leadbrain/korean-data-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_data_mcp"]
